# carbonado-node

./: Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
src/: backend.rs  config.rs  constants.rs  lib.rs  structs.rs
src/backend/: fs.rs  task.rs
src/frontend/: http.rs
tests/: file.rs
