[package]
name = "carbonado-node"
version = "0.1.0"
edition = "2021"

[build]
rustflags = "-Ctarget-feature=+sse3,+avx,+aes"

[[bin]]
name = "carbonadod"

[features]
default = []
neon = ["blake3/neon"]
rayon = ["blake3/rayon"]

[dependencies]
anyhow = "1.0.69"
axum = "0.6.9"
axum-macros = "0.3.4"
bao = "0.12.1"
blake3 = "1.3.3"
carbonado = { version = "0.2.5", path = "../carbonado" }
chrono = "0.4.23"
clap = { version = "4.0.32", features = ["derive"] }
directories = "4.0.1"
hex = "0.4.3"
human_bytes = "0.4.1"
infer = "0.12.0"
log = "0.4.17"
once_cell = "1.17.1"
par-stream = "0.10.2"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
rayon = "1.6.1"
secp256k1 = { version = "0.26.0", features = [
    "global-context",
    "rand-std",
    "bitcoin-hashes-std",
    "serde",
] }
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.25.0", features = ["full"] }
toml = "0.7.2"
tower-http = { version = "0.4.0", features = ["cors"] }

[dev-dependencies]
serial_test = "1.0.0"
